fix spacing mobile

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,7 +2,7 @@
     font-size: 90%;
     clear: both;
     padding-bottom: 1em;
-    margin-top: 5em;
+    margin-top: calc($section-spacing + 1em);
     text-align: center;
 
     ul,
@@ -18,7 +18,6 @@
         background-color: $colour-black;
         content: '';
         display: block;
-        margin-bottom: $section-spacing;
         @include dark-mode($background: $colour-dark-mode-white);
     }
 
